@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1652] fixed user media deletion on profile save (Aly)
  - [ZBX-1643] removed edit links from search if no write access to object (Aly)
  - [ZBX-1661] fixed value mappings retrieval (Aly)
  - [ZBX-1665] fixed hosts view in graphs configuration screen (Aly)
